<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="instagram">𝓘𝓷𝓼𝓽𝓪𝓰𝓻𝓪𝓶</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
